Sửa flow tạo tin tuyển thêm AI check sự liêm chính của đơn tuyển